# Catch2-probe

./: CMakeLists.txt  README.md  factorial.cc  main.cc  tests.cc
